raffia/tests/error/scss/at-rule/use/with-space-after-dollar.snap
---
source: raffia/tests/error.rs
---
error: unknown token
  ┌─ with-space-after-dollar.scss:1:20
  │
1 │ @use "other" with ($ a: b);
  │                    ^


